# fuzzy-fortnight

./: Project_Description.md  README.md  environment.yaml  raport.md
tek5020-p2/: pyproject.toml
tek5020-p2/notebook/: p2.ipynb
tek5020-p2/tek5020_p2/: __main__.py  utils.py
